@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-  <!-- General -->
-  <category>
-    <setting id="ip_adress" type="ipaddress" label="30001" default="127.0.0.1"/>
+  <!-- Connection -->
+  <category label="30000">
+    <setting id="use_hostname" type="bool" label="30008" default="false" />
+    <setting id="hostname" type="text" label="30009" default="" visible="eq(-1,true)" />
+    <setting id="ip_adress" type="ipaddress" label="30001" default="127.0.0.1" visible="eq(-2,false)" />
     <setting id="ip_port" type="number" label="30002" default="10025"/>
+    
+    <setting label="30010" type="lsep" />
+    <setting id="use_conn2" type="bool" label="30011" default="false" />
+    <setting id="use_hostname2" type="bool" label="30008" default="false"  enable="eq(-1,true)" />
+    <setting id="hostname2" type="text" label="30009" default="" visible="eq(-1,true)"  enable="eq(-2,true)" />
+    <setting id="ip_adress2" type="ipaddress" label="30001" default="127.0.0.1" visible="eq(-2,false)" enable="eq(-3,true)" />
+    <setting id="ip_port2" type="number" label="30002" default="10025" enable="eq(-4,true)" />
   </category>
   <!-- Interface -->
   <category label="30007">
